# woop

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  config.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
assets/shaders/: bloom.frag  bloom.vert  crt.frag  crt.vert  frag.glsl  vert.glsl
include/: bsp.hpp  camera.hpp  canvas.hpp  display_rect.hpp  exception.hpp  level.hpp  log.hpp  player.hpp  renderer.hpp  shader.hpp  utils.hpp  wad.hpp  window.hpp
src/: CMakeLists.txt  config.cpp  config.hpp  main.cpp  test.cpp
src/core/: CMakeLists.txt  bsp.cpp  camera.cpp  display_rect.cpp  level.cpp  player.cpp  renderer.cpp  shader.cpp  wad.cpp  window.cpp
tests/: CMakeLists.txt  FetchGTest.cmake  camera.cpp  level.cpp  placeholder.cpp  wad.cpp
